--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -1,10 +1,8 @@
-name: LinkedIn Scraper
-
+name: LinkedIn Scraper Test
 on:
   schedule:
-    - cron: '0 */3 * * *'  # Every 3 hours
-    - cron: '20 */4 * * *' # Every 4 hours + 20min offset
-    - cron: '45 */2 * * *' # Every 2 hours + 45min offset
+    - cron: '*/5 * * * *'  # Every 5 minutes
+  workflow_dispatch:
 
 jobs:
   scrape:
@@ -13,19 +11,26 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.10'
 
-    - name: Install Dependencies
+    - name: Install system dependencies
       run: |
-        sudo apt-get install -y chromium
-        pip install -r requirements.txt
-        playwright install chromium
+        sudo apt-get update
+        sudo apt-get install -y libgbm-dev libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxfixes3 libxrandr2
+        
+    - name: Install Python packages
+      run: |
+        python -m pip install --upgrade pip
+        pip install playwright google-cloud-firestore pytz requests beautifulsoup4
+        playwright install --with-deps chromium
 
     - name: Run Scraper
       env:
-        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS_JSON }}
+        FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
       run: |
-        echo "${{ secrets.FIREBASE_CREDENTIALS_JSON }}" > firebase-key.json
+        # Convert escaped newlines to actual newlines
+        echo "$FIREBASE_CREDENTIALS" | sed 's/\\n/\n/g' > firebase-key.json
         python main.py
+
