--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-playwright==1.42.0
-beautifulsoup4==4.12.3
-google-cloud-firestore==2.15.0
-pytz==2024.1
-requests==2.31.0
-fastapi==0.110.0
-uvicorn==0.29.0
+playwright
+google-cloud-firestore
+pytz
+requests
+beautifulsoup4
