--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -16,8 +16,9 @@ jobs:
 
     - name: Install system dependencies
       run: |
-        sudo apt-get update
+        sudo apt-get update -y
         sudo apt-get install -y \
+            libvpx7/jammy-security \
             libgbm-dev \
             libnss3 \
             libatk1.0-0 \
@@ -29,6 +30,7 @@ jobs:
             libxdamage1 \
             libxfixes3 \
             libxrandr2
+
             
     - name: Install Python packages
       run: |
