--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -1,49 +1,53 @@
-name: LinkedIn Scraper Test
+name: LinkedIn Job Scraper
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Every 5 minutes
+    - cron: '*/5 * * * *'  # Every 5 minutes for testing
   workflow_dispatch:
+
 jobs:
   scrape:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update -y
-        sudo apt-get install -y \
-            libvpx7/jammy-security \
-            libgbm-dev \
-            libnss3 \
-            libatk1.0-0 \
-            libatk-bridge2.0-0 \
-            libcups2 \
-            libdrm2 \
-            libxkbcommon0 \
-            libxcomposite1 \
-            libxdamage1 \
-            libxfixes3 \
-            libxrandr2
-
-            
-    - name: Install Python packages
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install firebase-admin playwright pytz requests beautifulsoup4
-        sudo apt-get install -y libwoff1 libopus0 libwebpdemux2 libharfbuzz-icu0 \
-            libgstreamer-plugins-base1.0-0 libgstreamer1.0-0 libhyphen0 \
-            libmanette-0.2-0 libatomic1 libevent-2.1-7 libvpx7 libxslt1.1
-        playwright install chromium --with-deps
 
-    - name: Run Scraper
+    - name: Install Playwright browsers
+      run: |
+        playwright install --with-deps chromium
+    - name: Create Firebase Credentials
       env:
         FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
       run: |
-        python -c "import json, os; f=open('firebase-key.json','w'); json.dump(json.loads(os.environ['FIREBASE_CREDENTIALS']), f); f.close()"
+        # Validate JSON structure first
+        echo "Validating JSON..."
+        python -c "import json, os; json.loads(os.environ['FIREBASE_CREDENTIALS'])"
+        
+        # Create file with proper permissions
+        echo "Creating firebase-key.json..."
+        python -c "import json, os; f=open('firebase-key.json','w'); json.dump(json.loads(os.environ['FIREBASE_CREDENTIALS']), f, indent=2); f.close()"
+        
+        # Verify file creation
+        echo "File contents:"
+        cat firebase-key.json
+        echo -e "\nFile size: $(wc -c < firebase-key.json) bytes"
+        ls -la
+
+    - name: Set up Firebase credentials
+      env:
+        FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
+      run: |
+        python -c "import json, os; open('firebase-key.json', 'w').write(os.environ['FIREBASE_CREDENTIALS'])"
+
+    - name: Run scraper
+      run: |
         python main.py
