--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -1,7 +1,8 @@
 name: LinkedIn Job Scraper
+
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Every 5 minutes for testing
+    - cron: '*/5 * * * *' # Every 5 minutes for testing
   workflow_dispatch:
 
 jobs:
@@ -16,37 +17,30 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install firebase-admin playwright pytz requests beautifulsoup4
 
-    - name: Install Playwright browsers
-      run: |
-        playwright install --with-deps chromium
+    - name: Install Playwright browsers and system dependencies
+      uses: microsoft/playwright-github-action@v1
+      with:
+        browsers: chromium
+
     - name: Create Firebase Credentials
       env:
         FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
       run: |
-        # Validate JSON structure first
         echo "Validating JSON..."
         python -c "import json, os; json.loads(os.environ['FIREBASE_CREDENTIALS'])"
         
-        # Create file with proper permissions
         echo "Creating firebase-key.json..."
         python -c "import json, os; f=open('firebase-key.json','w'); json.dump(json.loads(os.environ['FIREBASE_CREDENTIALS']), f, indent=2); f.close()"
         
-        # Verify file creation
         echo "File contents:"
         cat firebase-key.json
         echo -e "\nFile size: $(wc -c < firebase-key.json) bytes"
         ls -la
-
-    - name: Set up Firebase credentials
-      env:
-        FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
-      run: |
-        python -c "import json, os; open('firebase-key.json', 'w').write(os.environ['FIREBASE_CREDENTIALS'])"
 
     - name: Run scraper
       run: |
