--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -2,12 +2,12 @@ name: LinkedIn Job Scraper
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # Every 5 minutes for testing
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 
 jobs:
   scrape:
-    runs-on: ubuntu-22.04  # Change from ubuntu-latest
+    runs-on: ubuntu-22.04  # Critical: Use supported LTS version
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
@@ -16,72 +16,22 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-            ca-certificates \
-            fonts-liberation \
-            libasound2 \
-            libatk-bridge2.0-0 \
-            libatk1.0-0 \
-            libc6 \
-            libcairo2 \
-            libcups2 \
-            libdbus-1-3 \
-            libexpat1 \
-            libfontconfig1 \
-            libgbm1 \
-            libgcc1 \
-            libglib2.0-0 \
-            libgtk-3-0 \
-            libnspr4 \
-            libnss3 \
-            libpango-1.0-0 \
-            libpangocairo-1.0-0 \
-            libstdc++6 \
-            libx11-6 \
-            libx11-xcb1 \
-            libxcb1 \
-            libxcomposite1 \
-            libxcursor1 \
-            libxdamage1 \
-            libxext6 \
-            libxfixes3 \
-            libxi6 \
-            libxrandr2 \
-            libxrender1 \
-            libxss1 \
-            libxtst6 \
-            lsb-release \
-            wget \
-            xdg-utils
 
-    - name: Install Python dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install firebase-admin playwright pytz requests beautifulsoup4
+        pip install -r requirements.txt
 
-    - name: Install Playwright browsers and system dependencies
-      uses: microsoft/playwright-github-action@v1
-      with:
-        browsers: chromium
-      
+    - name: Install Playwright
+      run: |
+        playwright install --with-deps chromium
+        playwright install chromium
 
     - name: Create Firebase Credentials
       env:
         FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
       run: |
-        echo "Validating JSON..."
-        python -c "import json, os; json.loads(os.environ['FIREBASE_CREDENTIALS'])"
-        
-        echo "Creating firebase-key.json..."
-        python -c "import json, os; f=open('firebase-key.json','w'); json.dump(json.loads(os.environ['FIREBASE_CREDENTIALS']), f, indent=2); f.close()"
-        
-        echo "File contents:"
-        cat firebase-key.json
-        echo -e "\nFile size: $(wc -c < firebase-key.json) bytes"
-        ls -la
+        echo "$FIREBASE_CREDENTIALS" > firebase-key.json
 
     - name: Run scraper
       run: |
