--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -1,13 +1,12 @@
 name: LinkedIn Job Scraper
-
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/5 * * * *'  # Every 5 minutes for testing
   workflow_dispatch:
 
 jobs:
   scrape:
-    runs-on: ubuntu-22.04  # Critical: Use supported LTS version
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
@@ -20,18 +19,28 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install firebase-admin playwright pytz requests beautifulsoup4
 
-    - name: Install Playwright
-      run: |
-        playwright install --with-deps chromium
-        playwright install chromium
+    - name: Install Playwright browsers
+      uses: microsoft/playwright-github-action@v1.8.0
+      with:
+        browsers: chromium
 
-    - name: Create Firebase Credentials
+    - name: Validate and Create Firebase Credentials
       env:
         FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
       run: |
-        echo "$FIREBASE_CREDENTIALS" > firebase-key.json
+        echo "$FIREBASE_CREDENTIALS" | python -c "
+import json, sys, os;
+try:
+    creds = json.loads(os.environ['FIREBASE_CREDENTIALS']);
+    with open('firebase-key.json', 'w') as f:
+        json.dump(creds, f, indent=2);
+    print('Firebase credentials file created successfully.');
+except Exception as e:
+    print(f'Error creating firebase-key.json: {e}');
+    sys.exit(1);"
+        cat firebase-key.json
 
     - name: Run scraper
       run: |
