--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -1,12 +1,13 @@
 name: LinkedIn Job Scraper
+
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Every 5 minutes for testing
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 
 jobs:
   scrape:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # Critical: Use supported LTS version
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v4
@@ -19,28 +20,32 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install firebase-admin playwright pytz requests beautifulsoup4
+        pip install -r requirements.txt
 
-    - name: Install Playwright browsers
-      uses: microsoft/playwright-github-action@v1.8.0
-      with:
-        browsers: chromium
-
-    - name: Validate and Create Firebase Credentials
+    - name: Install Playwright
+      run: |
+        playwright install --with-deps chromium
+        playwright install chromium
+    - name: Create Firebase Credentials
       env:
         FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
       run: |
-        echo "$FIREBASE_CREDENTIALS" | python -c "
-import json, sys, os;
-try:
-    creds = json.loads(os.environ['FIREBASE_CREDENTIALS']);
-    with open('firebase-key.json', 'w') as f:
-        json.dump(creds, f, indent=2);
-    print('Firebase credentials file created successfully.');
-except Exception as e:
-    print(f'Error creating firebase-key.json: {e}');
-    sys.exit(1);"
+        echo "Validating JSON..."
+        python -c "import json, os; json.loads(os.environ['FIREBASE_CREDENTIALS'])"
+        
+        echo "Creating firebase-key.json..."
+        python -c "import json, os; f=open('firebase-key.json','w'); json.dump(json.loads(os.environ['FIREBASE_CREDENTIALS']), f, indent=2); f.close()"
+        
+        echo "File contents:"
         cat firebase-key.json
+        echo -e "\nFile size: $(wc -c < firebase-key.json) bytes"
+        ls -la
+
+    # - name: Create Firebase Credentials
+    #   env:
+    #     FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
+    #   run: |
+    #     echo "$FIREBASE_CREDENTIALS" > firebase-key.json
 
     - name: Run scraper
       run: |
