--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -2,7 +2,7 @@ name: LinkedIn Job Scraper
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 */2 * * *'
   workflow_dispatch:
 
 jobs:
@@ -38,7 +38,7 @@ jobs:
         python -c "import json; json.load(open('firebase-key.json'))"
         echo -e "\nFile structure:"
         ls -la firebase-key.json
-        
+
     - name: Debug Firebase Creds
       run: |
         echo "Credentials content:"
