--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -35,15 +35,19 @@ jobs:
         fi
 
     - name: Install dependencies
+      if: steps.random.outputs.run_job == 'true'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Install Playwright
+      if: steps.random.outputs.run_job == 'true'
       run: |
         playwright install --with-deps chromium
         playwright install chromium
     - name: Create Firebase Credentials
+      if: steps.random.outputs.run_job == 'true'
+
       env:
         FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
       run: |
@@ -57,6 +61,8 @@ jobs:
         ls -la firebase-key.json
 
     - name: Debug Firebase Creds
+      if: steps.random.outputs.run_job == 'true'
+
       run: |
         echo "Credentials content:"
         cat firebase-key.json
@@ -69,5 +75,6 @@ jobs:
     #     echo "$FIREBASE_CREDENTIALS" > firebase-key.json
 
     - name: Run scraper
+      if: steps.random.outputs.run_job == 'true'
       run: |
         python main.py
