--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -2,7 +2,7 @@ name: LinkedIn Job Scraper
 
 on:
   schedule:
-    - cron: '*/30 */1 * * *'
+    - cron: '30 */1 * * *'
   workflow_dispatch:
 
 jobs:
