--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -31,6 +31,10 @@ jobs:
       if: steps.random.outputs.run_job == 'true'
       run: |
         python -m pip install --upgrade pip
+        sudo apt-get update
+
+        sudo apt-get install -y libgbm-dev  # Required for Playwright in multiprocessing
+
         pip install -r requirements.txt
 
     - name: Install Playwright
