--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -68,12 +68,12 @@ jobs:
       run: |
         python main.py
 
-    - name: Commit updated session state
-      if: steps.random.outputs.run_job == 'true' && success()
-      run: |
-        git config user.name github-actions
-        git config user.email github-actions@github.com
-        git pull origin main
-        git add state.json
-        git commit -m "🔄 Update LinkedIn session state"
-        git push origin main
+    # - name: Commit updated session state
+    #   if: steps.random.outputs.run_job == 'true' && success()
+    #   run: |
+    #     git config user.name github-actions
+    #     git config user.email github-actions@github.com
+    #     git pull origin main
+    #     git add state.json
+    #     git commit -m "🔄 Update LinkedIn session state"
+    #     git push origin main
