--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -58,15 +58,15 @@ jobs:
         echo "$LINKEDIN_SESSION" > state_main.json
         echo "LinkedIn session state created"
  
-    - name: Run scraper
-      if: steps.random.outputs.run_job == 'true'
-      env:
-        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
-        LINKEDIN_EMAIL: ${{ secrets.LINKEDIN_EMAIL }}
-        LINKEDIN_PASSWORD: ${{ secrets.LINKEDIN_PASSWORD }}
-      run: |
-        python main.py
+    # - name: Run scraper
+    #   if: steps.random.outputs.run_job == 'true'
+    #   env:
+    #     SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+    #     SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+    #     LINKEDIN_EMAIL: ${{ secrets.LINKEDIN_EMAIL }}
+    #     LINKEDIN_PASSWORD: ${{ secrets.LINKEDIN_PASSWORD }}
+    #   run: |
+    #     python main.py
 
     # - name: Commit updated session state
     #   if: steps.random.outputs.run_job == 'true' && success()
